--- a/css/admin.css
+++ b/css/admin.css
@@ -34,6 +34,7 @@ ul li{
   float: left;
   top: -20px;
   margin-left: -5%;
+  border-radius: 100%;
   -webkit-animation:spin 4s linear infinite;
   -moz-animation:spin 4s linear infinite;
   animation:spin 4s linear infinite;
