--- a/css/booking.css
+++ b/css/booking.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
     padding:0px;
-    background:url(../images//background//tajj.jpg) no-repeat;
+    background:url(../images//background//book.jpg) no-repeat;
     height: 90.8vh;
     background-size: 100% 100%; 
     text-align: center;
@@ -73,6 +73,7 @@ body{
     float: left;
     top: -20px;
     margin-left: -5%;
+    border-radius: 100%;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
