--- a/css/destination.css
+++ b/css/destination.css
@@ -44,7 +44,8 @@ ul li{
   position: relative;
   float: left;
   top: -20px;
-  margin-left: -5%;
+  border-radius: 100%;
+  margin-left: 7%;
   -webkit-animation:spin 4s linear infinite;
   -moz-animation:spin 4s linear infinite;
   animation:spin 4s linear infinite;
@@ -62,7 +63,7 @@ ul li{
   float: left;
   top:-18px;
   left: 10%;
-  width: 200px;
+  width: 180px;
   padding: 6px;
   font-size: 15px;
   border-radius: 15px;
@@ -79,7 +80,7 @@ ul li{
   position: relative;
   float: right;
   top:-50px;
-  left: 2%;
+  left: 5%;
   margin-left: 20%; 
   padding: 4px;
   border-radius: 10px;
