--- a/css/gallery.css
+++ b/css/gallery.css
@@ -41,6 +41,7 @@ body{
     float: left;
     top: -20px;
     margin-left: -5%;
+    border-radius: 100%;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
