--- a/css/signin.css
+++ b/css/signin.css
@@ -4,7 +4,7 @@ body
 	margin:0;
 	padding:0;
 	font-family:sans-serif;
-	background:url(../back.jpg) no-repeat;
+	background:url(../book.jpg) no-repeat;
 	height: 100vh;
 	background-size: 100% 100%;
 	
@@ -12,7 +12,7 @@ body
 .login-box
 
 {
-	
+	background-color:grey transparent;
 	width:280px;
 	position:absolute;
 	top:50%;
@@ -37,6 +37,7 @@ body
 	font-size:20px;
 	padding:8px 0;
 	margin:8px 0;
+  color:rgb(119, 119, 119);
 	border-bottom:1px solid #4caf50;
 }
 .textbox i 
@@ -82,103 +83,8 @@ body
 	background-color: #4caf50;
 }
 
-.main{
-  overflow: hidden;
-  position: fixed;
-  background-color: rgba(135,206,250,0.4);
-  top: 0;
-  width: 100vw;
-  height: 8vh;
-  max-width: 1550px;
-}
 
-ul{
-  list-style-type: none;
-  margin-top: 20px;
-  margin-right: 50px;
-}
 
-ul li{
-  display: inline;
-}
-
-.list{
-  position: fixed;
-  display: block;
-  top: 9px;
-  float: left;
-}
-
-.list li.logo img{
-  position: relative;
-  float: left;
-  top: -20px;
-  margin-left: -5%;
-  -webkit-animation:spin 4s linear infinite;
-  -moz-animation:spin 4s linear infinite;
-  animation:spin 4s linear infinite;
-
-}
-
-.search{
-  display: inline;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-}
-
-.search input[type=text]{
-  position: relative;
-  float: left;
-  top:-18px;
-  left: 5%;
-  padding: 6px;
-  font-size: 15px;
-  border-radius: 15px;
-  border: 1px solid #0000ff;
-  transition: 0.6s ease;
-}
-
-.search input[type=text]:hover{
-  background-color: #dcdcdc;
-}
-
-.list input[type=image]{
-  position: relative;
-  float: right;
-  top:-50px;
-  left: 2%;
-  margin-left: 20%; 
-  padding: 4px;
-  border-radius: 10px;
-  border: 1px solid #00f;
-  transition: 0.6s ease;
-  background-color: #fff;
-}
-
-.list input[type=image]:hover{
-  background-color: #739ac5;
-}
-
-.list2{
-  position: relative;
-  top: -20px;
-  float: right;
-}
-
-.list2 li a{
-  text-decoration: none;
-  color: #fff;
-  padding: 5px 20px;
-  border: 1px solid transparent;
-  transition: 0.9s ease;
-}
-
-.list2 li a:hover{
-  background-color: #fff;
-  color: #000;
-
-}
 
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
