--- a/css/signup.css
+++ b/css/signup.css
@@ -3,7 +3,7 @@ body
   margin:0;
   padding:0;
   font-family:sans-serif;
-  background:url(../back.jpg) no-repeat;
+  background:url(../book.jpg) no-repeat;
   height: 100vh;
   background-size: 100% 100%; 
 }
