--- a/css/info.css
+++ b/css/info.css
@@ -111,7 +111,7 @@ ul li{
 }
 
 .container{
-  background-color: rgba(239, 97, 182, 0.932);
+  background-color: #FFC5C5;
 	width: 85vw;
 	height: 95vh;
 	margin:-2% 0% 5% 0%;
